# Graphy-AI

./: .gitignore  GRAPHY_AI_CONTEXT.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 96c62ea90ff6_initial_schema_14_tables.py
backend/app/: config.py  integrations.py  main.py  security.py
backend/app/agents/: application.py  cover_letter.py  github_analyzer.py  gmail.py  job_discovery.py  matching.py  resume_intelligence.py  resume_tailoring.py  tracking.py
backend/app/db/: models.py  session.py
backend/app/llm/: client.py
backend/app/routers/: applications.py  dashboard.py  github.py  jobs.py  notifications.py  resumes.py
backend/app/schemas/: __init__.py
backend/app/services/: discovery.py  github_fetch.py  resume_parser.py  users.py
backend/app/vector/: chroma.py
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/applications/: page.tsx
frontend/app/approvals/: page.tsx
frontend/app/github/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/resumes/: page.tsx
frontend/components/: page-header.tsx  sidebar.tsx
frontend/lib/: api.ts
resume/: Bade_Manasa_Vamsi_Resume.md
