[project]
name = "graphy-ai-backend"
version = "0.1.0"
description = "Graphy AI - local-first AI career automation platform (backend)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "pypdf>=5.1",
    "chromadb>=0.5.20",
    "google-genai>=0.3",
    "cryptography>=44.0",
    "playwright>=1.49",
    # Phase 4 Gmail agent (lazy-imported; run `uv sync` to install). Read-only.
    "google-api-python-client>=2.150",
    "google-auth-oauthlib>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
